Updated README, fixed score display bug, created jar file